# kopia-exporter

./: .gitignore  CLAUDE.md  Cargo.toml  Instructions-max-bind-retries.md  README.md  TODOs.md  default.nix  flake.nix  generate-docs.sh  nixos-module.nix  nixos-vm-test.nix
nixos-module/: extract-options.nix  nixos-module.nix  nixos-vm-auth-test.nix  nixos-vm-caching-test.nix  nixos-vm-test.nix  vm-test-lib.nix
src/: assert_contains.rs  index.html  kopia.rs  lib.rs  main.rs  metrics.rs  sample_kopia-snapshot-list.json
src/kopia/: source_map.rs  source_str.rs
src/metrics/: change_bytes.rs  error_totals.rs  failed_files.rs  ignored_errors.rs  kopia_snapshot_age_seconds.rs  kopia_snapshot_errors_ignored_total.rs  kopia_snapshot_errors_total.rs  kopia_snapshot_failed_files_total.rs  kopia_snapshot_last_success_timestamp.rs  kopia_snapshot_oldest_age_seconds.rs  kopia_snapshot_parse_errors_source.rs  kopia_snapshot_parse_errors_timestamp_total.rs  kopia_snapshot_size_bytes_change.rs  kopia_snapshot_size_bytes_total.rs  kopia_snapshots_by_retention.rs  kopia_snapshots_total.rs  last_age.rs  last_snapshots.rs  last_timestamp.rs  metrics_framework.rs  retention.rs  snapshot_age_seconds.rs  snapshot_errors_ignored_total.rs  snapshot_errors_total.rs  snapshot_failed_files_total.rs  snapshot_last_success_timestamp.rs  snapshot_parse_errors_source.rs  snapshot_parse_errors_timestamp_total.rs  snapshot_size_bytes_change.rs  snapshot_size_bytes_total.rs  snapshots_by_retention.rs  snapshots_total.rs  source_parse_errors.rs  total_size_bytes.rs
supply-chain/: config.toml
tests/: bind_retry_test.rs  entrypoint.rs  integration_test.rs
tests/test_helpers/: mod.rs
(+1 files in other folders)
