[package]
name = "kopia-exporter"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# teach me
pedantic = { level = "warn", priority = -1 }
# except this confusing pattern
bool_to_int_with_if = { level = "allow", priority = 1 }
# and this convenience
manual_string_new = { level = "allow", priority = 1 }

# no unwrap
unwrap_used = "deny"
# no panic
panic = "deny"

[lints.rust]
# docs!
missing_docs = "deny"
# no unsafe
unsafe_code = "forbid"

[lints.rustdoc]
# docs!
broken_intra_doc_links = "deny"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
