[package]
name = "kopia-exporter"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# teach me
pedantic = { level = "warn", priority = -1 }
# except this confusing pattern
bool_to_int_with_if = { level = "allow", priority = 1 }
# and this convenience
manual_string_new = { level = "allow", priority = 1 }

# no unwrap
unwrap_used = "deny"
# no panic
panic = "deny"

[lints.rust]
# docs!
missing_docs = "deny"
# no unsafe
unsafe_code = "forbid"

[lints.rustdoc]
# docs!
broken_intra_doc_links = "deny"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive"] }
eyre = "0.6.12"
jiff = { version = "0.2.15", default-features = false, features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tiny_http = "0.12"

[dev-dependencies]
insta = { version = "1.43.1", default-features = false }
minreq = "2.12"
tempfile = "3.10"
